Update account controller, remind test code
