# docs/openapi-definition/openapi.json
@@ -46,13 +46,24 @@
                 "schema" : {
                   "type" : "array",
                   "items" : {
-                    "type" : "object"
+                    "$ref" : "#/components/schemas/AccountResponse"
                   }
                 }
               }
             }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
           }
-        }
+        },
+        "security" : [ {
+          "SecurityScheme" : [ "Admin" ]
+        }, {
+          "SecurityScheme" : [ "Admin" ]
+        } ]
       },
       "post" : {
         "tags" : [ "Account Operations" ],
@@ -128,8 +139,19 @@
                 }
               }
             }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
           }
-        }
+        },
+        "security" : [ {
+          "SecurityScheme" : [ "Admin", "Normal" ]
+        }, {
+          "SecurityScheme" : [ "Admin", "Normal" ]
+        } ]
       },
       "delete" : {
         "tags" : [ "Account Operations" ],
@@ -145,8 +167,19 @@
         "responses" : {
           "204" : {
             "description" : "No Content"
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
           }
-        }
+        },
+        "security" : [ {
+          "SecurityScheme" : [ "Admin" ]
+        }, {
+          "SecurityScheme" : [ "Admin" ]
+        } ]
       },
       "patch" : {
         "tags" : [ "Account Operations" ],
@@ -154,7 +187,7 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "type" : "object"
+                "$ref" : "#/components/schemas/AccountUpdateRequest"
               }
             }
           }
@@ -165,12 +198,23 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "object"
+                  "$ref" : "#/components/schemas/AccountResponse"
                 }
               }
             }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
           }
-        }
+        },
+        "security" : [ {
+          "SecurityScheme" : [ "Admin", "Normal" ]
+        }, {
+          "SecurityScheme" : [ "Admin", "Normal" ]
+        } ]
       }
     },
     "/api/v1/auth/login" : {
@@ -489,6 +533,52 @@
           },
           "roleName" : {
             "type" : "string"
+          }
+        }
+      },
+      "AccountUpdateRequest" : {
+        "required" : [ "accountName", "firstName", "lastName", "birthday", "email", "phoneNumber", "password", "accountRole" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "format" : "int64",
+            "type" : "integer"
+          },
+          "accountName" : {
+            "maxLength" : 20,
+            "minLength" : 1,
+            "type" : "string"
+          },
+          "firstName" : {
+            "maxLength" : 20,
+            "minLength" : 1,
+            "type" : "string"
+          },
+          "middleName" : {
+            "type" : "string"
+          },
+          "lastName" : {
+            "maxLength" : 20,
+            "minLength" : 1,
+            "type" : "string"
+          },
+          "birthday" : {
+            "$ref" : "#/components/schemas/LocalDate"
+          },
+          "email" : {
+            "type" : "string"
+          },
+          "phoneNumber" : {
+            "type" : "string"
+          },
+          "password" : {
+            "pattern" : "\\S",
+            "type" : "string"
+          },
+          "accountRole" : {
+            "format" : "int64",
+            "minimum" : 1,
+            "type" : "integer"
           }
         }
       },
