# src/main/java/com/example/application/converter/AccountResourceConverter.java
@@ -1,6 +1,7 @@
 package com.example.application.converter;
 
 import com.example.application.model.request.AccountCreateRequest;
+import com.example.application.model.request.AccountUpdateRequest;
 import com.example.application.model.response.AccountResponse;
 import com.example.domain.entity.Account;
 import io.quarkus.runtime.annotations.IgnoreProperty;
@@ -17,4 +18,8 @@ public interface AccountResourceConverter {
     @Mapping(source = "accountRole", target = "accountRole.roleId")
     @IgnoreProperty
     Account toDomain(AccountCreateRequest request);
+
+    @Mapping(source = "accountRole", target = "accountRole.roleId")
+    @IgnoreProperty
+    Account toDomain(AccountUpdateRequest request);
 }
